# DEploid

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  Brewfile  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Doxyfile  Makefile.am  PULL_REQUEST_TEMPLATE.md  README.md  VERSION  bootstrap  checkfiles.sh  circle.yml  compiledate.sh  configure.ac  deploid_version.sh  lassoversion.sh  meson.build  version
.ci/: checkedList  mycppfileList  style.sh
.circleci/: .circleci-matrix.yml  config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ccpp.yml
PG0400PG0413/: .gitignore  PG0400.C.exclude.csv  PG0413.C.exclude.csv  runPG0400.notexclude.sh  runPG0400.sh  runPG0413.notexclude.sh  runPG0413.sh
ci/: .circleci-matrix.yml
data/exampleData/: .gitignore  PG0390-C.alt  PG0390-C.ref  README.md  extractVcf.r  labStrains.eg.PLAF.txt  labStrains.eg.panel.txt
data/testData/: PG0390-C.test.alt  PG0390-C.test.nopanel.hap  PG0390-C.test.ref  PG0390-C.test.vcf  README.md  bad.plaf.txt  bad.plaf_badpos.txt  bad.plaf_scientific.txt  bad.plaf_scientificE.txt  labStrains.test.PLAF.txt  labStrains.test.exclude.txt  labStrains.test.panel.txt  testingPanel.txt  txtReaderForTesting.txt
data/testData/crappyVcf/: badHeaderFieldNames.alt.vcf  badHeaderFieldNames.chrom.vcf  badHeaderFieldNames.chrom2.vcf  badHeaderFieldNames.id.vcf  badHeaderFieldNames.info.vcf  badHeaderFieldNames.qual.vcf  badVariant.noAD.vcf  badVariant.noVQSLOD.vcf
docs/: Bug-report.md  Citing-DEploid.md  DEploid-workflow.md  FAQ.md  Makefile  Output.md  Pf3k-workflow.md  bug-report.rst  citation.rst  conf.py  cppdocument.rstTmp  description.rst  example.rst  example.rstTmp  index.rst  input.rst  installation.rst  introduction.rst  output.rst  synopsis.md  synopsis.rst
docs/_build/man/: dEploid.1
docs/doxygen/: Doxyfile.in  Makefile.am
labStrains/: PG0389.C.exclude.csv  PG0390_first100ref.txt  clonalPanel.csv  makePlots.r
src/: atMarker.cpp  atMarker.hpp  chooseK.cpp  chooseK.hpp  dEploid.cpp  dEploidIO-operation.cpp  dEploidIO-workflow.cpp  dEploidIO.cpp  dEploidIO.hpp  dEploid_completion.sh  exceptions.hpp  export.cpp  fastfunc.cpp  fastfunc.hpp  global.h  global.hpp  ibd.cpp  ibd.hpp  lasso  log-double.hpp  logsum.hpp  mcmc.cpp  mcmc.hpp  mersenne_twister.cpp  mersenne_twister.hpp  panel.cpp  panel.hpp  param.cpp  param.hpp  pfDeconv.cpp  pfDeconvIO.cpp  pfDeconvIO.hpp  pfDeconvIOExport.cpp  random_generator.cpp  random_generator.hpp  txtReader.cpp  txtReader.hpp  updateHap.cpp  updateHap.hpp  utility.cpp  (+5 more)
src/codeCogs/: asympt_expn.h  errorfn.h  errorfnc.h  errorfnc_exp.h  expx2.h  gamma.h  ln_add1.h  log_gamma.h  logbeta.h  loggammafrac.h  loggammasum.h  machine_epsilon.h  mersenne.hpp  poly_eval.h  randomSample.hpp  stirling.h  xsub_ln_add1.h
src/debug/: mcmcDebug.cpp  vcfReaderDebug.cpp
src/export/: dEploidIOExport.cpp  dEploidIOExportPosteriorProb.cpp  mcmcIO.cpp  pfDeconvIOExport.cpp  pfDeconvIOExportPosteriorProb.cpp  writeMcmcRelated.cpp
src/gzstream/: gzstream.cpp  gzstream.h
src/random/: fastfunc.cpp  fastfunc.hpp  mersenne_twister.cpp  mersenne_twister.hpp  random_generator.cpp  random_generator.hpp
tests/: PG0390_alt.txt  PG0390_ref.txt  PG0393_alt.txt  PG0393_ref.txt  PG0394_alt.txt  PG0394_ref.txt  labStrains_first100_PLAF.txt  labStrains_samples_PLAF.txt  lab_first100_Panel.txt  test-against-previous-version.sh  test-coverage-coverall.sh  test-coverage-local.sh  testForbidMoves.sh  testPOS.sh  test_binary.sh  test_binaryReproducible.sh  test_binaryVcfVsTxt.sh
tests/testData/: PG0389-C.vcf  PG0389-C100.vcf  PG0389.C_alt100.txt  PG0389.C_ref100.txt  PG0390.C_alt.txt  PG0390_first100alt.txt  PG0390_first100ref.txt  altCountForTesting.csv  atMarkerForTestingAfterExclude.txt  clonalPanel.csv  excludeFortesting.txt  labStrains_first100_PLAF.txt  labStrains_samples_PLAF.txt  panelForTesting.csv  plafForTesting.csv  refCountForTesting.csv
tests/testData/crappyVcf/: badHeaderFieldNames.filter.vcf  badHeaderFieldNames.format.vcf  badHeaderFieldNames.pos.vcf  badHeaderFieldNames.ref.vcf  badVariant.noAD.vcf
tests/unittest/: test_atMarker.cpp  test_dEploidIO.cpp  test_ibd.cpp  test_mcmc.cpp  test_panel.cpp  test_param.cpp  test_pfDeconvID.cpp  test_pfDeconvIO.cpp  test_runner.cpp  test_txtReader.cpp  test_updatePairHap.cpp  test_updateSingleHap.cpp  test_utilities.cpp  test_vcfReader.cpp  test_workflow.cpp
utilities/: DEploidR.R  dEploidTools.r  dataExplore.r  interpretDEploid.r  makePlots.r  makePlots2.r  makePlots3.r  makePlots4.r
